...
        <Marque />
        <span className="label">Zone 2</span>
      </header>

      <section className="form__rest">
        <div className="field">
          <span className="label">Âge</span>
          <span className="field__in">
            <input
              ref={ageRef}
              value={age}
              onChange={onAge}
              onKeyDown={(e) => {
...
      <div className="form__bottom">
        <button
          type="submit"
          className="save"
          disabled={isSubmitting || debut === undefined || fin === undefined}
        >
          Enregistrer
        </button>
      </div>
    </form>
  )
}

